kubernetes/core/networking/nginx-int-ingress-system/services/prometheus/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ExternalName
  externalName: mgmt-srv-01.${LOCAL_DOMAIN}
  ports:
    - name: http
      port: &port 9090
      protocol: TCP
      targetPort: *port
