kubernetes/core/networking/nginx-int-ingress-system/services/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app prometheus
  annotations:
    external-dns.alpha.kubernetes.io/target: ${LOCAL_DOMAIN}
spec:
  ingressClassName: int-ingress
  rules:
    - host: &host rpi-prometheus.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 9090
  tls:
    - hosts:
        - *host
